# ym

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.goose  Dockerfile.minio.init  LICENSE  Makefile  README.md  compose.dev.yml  compose.yml  go.mod  go.sum  init-minio.sh  prometheus.yml
api/: docs.go  openapi.yml  swagger.yaml
api/paths/: album.yml  artist.yml  playlist.yml  track.yml  user.yml
api/schemas/: album.yml  artist.yml  common.yml  playlist.yml  track.yml  user.yml
cmd/server/: main.go  main_test.go
db/: sqlc.yml
db/migrations/: 00001_add_user_table.sql  00002_add_artist_table.sql  00003_add_album_table.sql  00004_add_track_table.sql  (+11 more)
docs/: docs.go  swagger.json  swagger.yaml
scripts/: get_envs_from_example.sh  start_server.sh
tests/: album_tracks_test.go  auth_test.go  backup_restore_test.go  environment_test.go  helpers_test.go  password_reset_test.go  patch_test.go  playlist_access_test.go  playlist_tracks_test.go  smoke_test.go  suite_test.go  track_delete_test.go  track_download_test.go
ya_music/: .env.example  Dockerfile  pyproject.toml
ya_music/app/: configuration.py  main.py  routes.py  settings.py
ya_music/app/api/http/: auth.py  user.py
ya_music/app/database/: models.py  utils.py
ya_music/app/database/alembic/: env.py
ya_music/app/database/alembic/versions/: fb51f2144bf6_add_user_relation.py
ya_music/app/schemas/: user.py
ya_music/app/security/: authentication_middleware.py  jwt.py
ya_music/app/services/: auth.py
ym_service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
(+254 files in other folders)
